--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
     <div class="mainDiv">
-        
+        <div class="red"></div>
+        <div class="yellow"></div>
+        <div class="green"></div>
     </div>
     
 </body>
